[package]
name = "liblo-sys"
version = "0.1.0"
edition = "2021"
authors = ["nomaterials <nomaterials@gmail.com>"]
description = "Raw FFI bindings for liblo (Open Sound Control library)"
repository = "https://github.com/no-materials/liblo-sys"
homepage = "https://github.com/no-materials/liblo-sys"
documentation = "https://docs.rs/liblo-sys"
readme = "README.md"
keywords = ["ffi", "osc", "liblo", "sound", "media"]
categories = ["multimedia::audio", "external-ffi-bindings"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
